--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ Author URI: www.studionext.pl
 }
 
 body{
-    background: #f9f9f9;
+    background: #29385f;
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
     font-size: 100%;
@@ -94,21 +94,6 @@ p{
 
 small{ font-size: 100%; }
 
-blockquote{
-    display: table;
-    width: 100%;
-    text-align: center;
-    padding: 35px 0 30px 0;
-    border-left: 0;
-    border-top: 1px solid #dfe4f0;
-    border-bottom: 1px solid #dfe4f0;
-    color: #2d4d98;
-    font-size: 30px;
-    line-height: 1.2;
-    font-style: normal;
-    margin: 15px 0 50px 0;
-}
-
 h1 { font-size: 60px; margin-bottom: 14px; font-family: 'Playfair Display', serif; color: #FFF; }
 h2 { font-size: 22px; margin-bottom: 10px; font-family: 'Playfair Display', serif; color: #FFF; font-weight: 700; }
 h3 { font-size: 24px; margin-bottom: 7px; font-family: 'Lato', serif; font-weight: bold; text-transform: uppercase; color: #22293b; }
@@ -140,7 +125,7 @@ h6 { font-size: 14px; }
 }
 
 .page--wrapper{
-    background: #f9f9f9;
+    background: #29385f;
     position: relative;
     z-index: 9;
     right: 0;
@@ -258,7 +243,27 @@ article h4{
     margin-bottom: 35px;
 }
 
-article p.featured{
+article blockquote{
+    display: table;
+    width: 100%;
+    text-align: center;
+    padding: 35px 0 30px 0;
+    border-left: 0;
+    border-top: 1px solid #dfe4f0;
+    border-bottom: 1px solid #dfe4f0;
+    font-style: normal;
+    margin: 15px 0 50px 0;
+}
+
+article blockquote p{
+    color: #2d4d98;
+    font-size: 30px;
+    line-height: 1.2;
+    margin: 0;
+    padding: 0;
+}
+
+article p.lead{
     color: #2c2a2a;
     font-size: 18px;
     line-height: 30px;
@@ -854,7 +859,7 @@ header .header-wrap .container{
     margin-top: 0;
 }
 
-.header-wrap .top-panel ul li.phone span:before{
+.header-wrap .top-panel ul li.phone a:before{
     content: ' ';
     background-image: url('assets/img/icons/phone.png');
     background-size: cover;
@@ -867,9 +872,14 @@ header .header-wrap .container{
     top: 20%;
 }
 
-.header-wrap .top-panel ul li.phone{
+.header-wrap .top-panel ul li.phone a{
     color: #22293b;
     font-weight: bold;
+    margin-top: 0;
+}
+
+.header-wrap .top-panel ul li.phone a:hover{
+    opacity: 0.7; 
 }
 
 .header-wrap .top-panel .container .row-tight{
