Wyświetlanie widgetowego menu z utworzonych podstron, wyświetlanie featured newsów na Home z kategorii podanej w ACF, moduł powiązane artykuły wyświetla artykuły z tej samej kategorii co obecnie wyświetlany

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,6 +2,11 @@
 
 
 	/*globals*/
+	body,
+	.page-wrapper{
+		background: #29385f;
+	}
+
 	.container,
 	header .header-wrap .container,
 	section.banners .container{
