--- a/style.css
+++ b/style.css
@@ -1036,7 +1036,7 @@ header .header-wrap .container{
     visibility: visible;
 }
 
-.header-wrap .container .sub-menu{
+.header-wrap .container ul.sub-menu{
     background-color: #29385f;
     left: 0;
     padding: 40px 75px;
@@ -1047,6 +1047,7 @@ header .header-wrap .container{
     display: block;
     opacity: 0;
     visibility: hidden;
+    list-style-type: disc;
     -webkit-transition: opacity 0.4s ease;
     -moz-transition: opacity 0.4s ease;
     -ms-transition: opacity 0.4s ease;
@@ -1054,33 +1055,26 @@ header .header-wrap .container{
     transition: opacity 0.4s ease;
 }
 
-.header-wrap .container .sub-menu h3{
+.header-wrap .container ul.sub-menu h3{
     color: #FFF;
     padding-bottom: 20px;
     border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 
-
-.header-wrap .container .sub-menu ul{
-    list-style-type: disc;
-    padding: 25px 15px 20px 15px;
-    margin: 0;
+.header-wrap .container ul.sub-menu li{
+    float: left;
+    width: 33%;
+    display: list-item;
+    color: #b6c0d8;
 }
 
-.header-wrap .container .sub-menu ul a{
+.header-wrap .container ul.sub-menu li a{
     color: #b6c0d8;
     font-size: 16px;
     font-weight: 400;
     line-height: 36px;
     text-transform: none;
     padding: 0 5px;
-}
-
-.header-wrap .container .sub-menu ul li{
-    float: left;
-    width: 33%;
-    display: list-item;
-    color: #b6c0d8;
 }
 
 
