--- a/style.css
+++ b/style.css
@@ -202,6 +202,68 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 }
 
 
+/*tile-img*/
+a.tile-img-link{
+  display: table;
+  width: 100%;
+  overflow: hidden;
+  height: 120px;
+  margin-bottom: 30px;
+}
+
+a.tile-img-link .tile-img{
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: inherit;
+  display: block;
+  -webkit-transition: all 0.6s ease-in-out;
+  -moz-transition: all 0.6s ease-in-out;
+  -o-transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
+
+}
+
+a.tile-img-link .tile-img:hover{
+  transform:scale(1.2);
+  -webkit-transform:scale(1.2);
+  -moz-transform:scale(1.2);
+  -o-transform:scale(1.2);
+}
+
+
+/*image placeholder*/
+.image-placeholder{
+  display: table;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background: rgba(0, 0, 0, 0.2);
+  text-align: center;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -ms-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.image-placeholder:hover{
+  background: rgba(0, 0, 0, 0.25);
+}
+
+.image-placeholder i{
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 50px;
+  color: #FFF;
+}
+
+aside .image-placeholder i{
+  font-size: 40px;
+}
+
+
 /*module featured-box*/
 .featured-box{
     padding: 35px 0 30px 0;
@@ -400,14 +462,10 @@ article .wrap{
     width: 100%;
 }
 
-article .article-img-wrap{
-    float: left;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 42%;
-    height: 120px;
-    margin-right: 8%;
+article a.tile-img-link{
+  float: left;
+  margin-right: 8%;
+  width: 42%;
 }
 
 article .article-content-wrap{
@@ -586,6 +644,11 @@ section.related-articles .btn.btn-transparent{
 .module-newsletter form{
     display: table;
     width: 100%;
+}
+
+.module-newsletter form input{
+  border-radius: 0;
+  margin-bottom: 0;
 }
 
 .module-newsletter p,
@@ -1764,37 +1827,6 @@ section.banners .span4:last-child a{
 /* ---------------------------------------------------------------
     archive
 --------------------------------------------------------------- */
-/*tile img*/
-a.tile-img-link{
-  display: table;
-  width: 100%;
-  overflow: hidden;
-  height: 180px;
-  margin-bottom: 20px;
-}
-
-a.tile-img-link .tile-img{
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: inherit;
-  display: block;
-  -webkit-transition: all 0.6s ease-in-out;
-  -moz-transition: all 0.6s ease-in-out;
-  -o-transition: all 0.6s ease-in-out;
-  transition: all 0.6s ease-in-out;
-
-}
-
-a.tile-img-link .tile-img:hover{
-  transform:scale(1.2);
-  -webkit-transform:scale(1.2);
-  -moz-transform:scale(1.2);
-  -o-transform:scale(1.2);
-}
-
-
 /*articles tiles list*/
 ul.article-tiles{
   display: table;
